2004-05-10  Richard Hult  <richard@imendio.com>

	* src/planner-ttable-view.c (ttable_view_update_zoom_sensitivity) 
	(activate, ttable_view_zoom_out_cb, ttable_view_zoom_in_cb) 
	(ttable_view_zoom_to_fit_cb): Fix bug #141116, patch from Lincoln.

	* data/ui/time-table-view.ui: Fix the weird edit menu.
	* src/planner-ttable-model.c: Start cleaning up coding style.

2004-05-10  Richard Hult  <richard@imendio.com>

	* data/ui/Makefile.am: Dist all ui files unconditionally.

	* data/glade/project-properties.glade:
	* src/planner-phase-dialog.c: (phase_dialog_remove_phase),
	(phase_dialog_new_dialog_run), (phase_cmd_insert_do),
	(phase_cmd_insert_undo), (phase_cmd_insert_free),
	(phase_cmd_insert), (phase_cmd_remove_do), (phase_cmd_remove_undo),

	(phase_cmd_remove_free), (phase_cmd_remove): Commit patch from
	Lincoln Phipps with modifications. Fixes bug #141177 and bug
	#141184.

2004-05-09 Alvaro del Castillo  <acs@barrapunto.com>

	* src/planner-gantt-row.c: Task link undo with new GError system.

	* src/planner-task-tree.c: 
	Clean "g_free (cmd)" and "g_free (cmd_base->label)" that it's done
	in the command manager.
	TaskCmdTaskMove is renamed to TaskCmdMove.
	Clean Task Move system so we use the new GError system.
	Undo system for link task.

	* src/planner-task-tree.[ch]:
	Export link undo method so planner-gantt-row.c can use it.
	
2004-05-03  Richard Hult  <richard@imendio.com>

	* configure.in:
	* libplanner/mrp-sql.c: (sql_get_last_error), (get_int), (get_id),
	(get_string), (get_boolean), (get_float), (mrp_sql_load_project),
	(mrp_sql_save_project):
	* src/Makefile.am:
	* src/planner-python-plugin.c: (python_plugin_execute): Fix build.

	* data/ui/python-plugin.ui: Fix typo.

2004-05-03 Alvaro del Castillo  <acs@barrapunto.com>

        * src/planner-resource-dialog.c: implemented undo for resource cost
        in the resource editor dialog.

        * src/planner-resource-dialog.c:
        (resource_dialog_close_clicked_cb)