@@ -15,8 +15,8 @@ DIE=0
 
 : ${AUTOCONF=autoconf}
 : ${AUTOHEADER=autoheader}
-: ${AUTOMAKE=automake-1.7}
-: ${ACLOCAL=aclocal-1.7}
+: ${AUTOMAKE=automake}
+: ${ACLOCAL=aclocal}
 : ${LIBTOOLIZE=libtoolize}
 : ${INTLTOOLIZE=intltoolize}
 : ${LIBTOOL=libtool}
