@@ -1,3 +1,12 @@
+2004-05-12  Tomasz Kłoczko <kloczek@pld.org.pl>
+
+	* autogen.sh: allow use autogen.sh not only in automake 1.7.x enviroment.
+	* data/ui/Makefile.am: fix for include in dist tar ball timetable
+	  and python UI files.
+	* dotnet/samples/Makefile.am, dotnet/Makefile.am: include in dist
+	  tar ball example files.
+	* src/Makefile.am: include in dist tar ball missing header files.
+
 2004-05-10  Richard Hult  <richard@imendio.com>
 
 	* src/planner-ttable-view.c (ttable_view_update_zoom_sensitivity) 
